Competitive Programming/pratice/dp/error
G:\code\Competitive Programming\pratice\dp\test.cpp: In function 'void solve()':
G:\code\Competitive Programming\pratice\dp\test.cpp:43:23: error: 'p' was not declared in this scope
   43 |         ans.push_back(p[i]);
      |                       ^
G:\code\Competitive Programming\pratice\dp\test.cpp:44:19: error: 'p' was not declared in this scope
   44 |     ans.push_back(p[r]);
      |                   ^
